# ilc-mppi

./: 01_Position_Waypoint_ILC_v2.md  02_MPPI_Slip_Model_Sampling_8D.md  03_Unified_Chapter.md  README.md
data/map/tiles_large/: map.pgm
docs/: 03_Engineering_Improvements.md
launch/: circular_tracking.launch  extreme_friction_tracking.launch  figure8_tracking.launch  gazebo_world.launch  highspeed_square_tracking.launch  navigation.launch  ori_navigaton.launch  racetrack_tracking.launch  square_tracking.launch
launch/experiments/: README.md  exp1_convergence.launch  exp2_ablation_ilc_off.launch  exp2_ablation_ilc_on.launch  exp3_decay_sweep.launch  exp4_generalization.launch  exp5_sample_budget.launch  exp6_sample_efficiency.launch  exp7_spatial_disturbance.launch  plot_exp1_convergence.py  plot_exp2_ablation.py  plot_exp3_decay_sweep.py  plot_exp4_generalization.py  plot_exp5_sample_budget.py  plot_exp6_sample_efficiency.py  plot_exp7_spatial_disturbance.py  plot_font_utils.py  run_exp1_convergence.sh  run_exp2_ablation.sh  run_exp3_decay_sweep.sh  run_exp4_generalization.sh  run_exp5_sample_budget.sh  run_exp6_sample_efficiency.sh  run_exp7_spatial_disturbance.sh
launch/experiments/config/: decay_0980.yaml  decay_0990.yaml  decay_0999.yaml  decay_1000.yaml  disturbance_full_stack.yaml  disturbance_ilc_aggressive.yaml  disturbance_ilc_off.yaml  disturbance_ilc_on.yaml  ilc_disabled.yaml  ilc_enabled.yaml  isolated_0032_ilc_aggressive.yaml  isolated_0032_ilc_off.yaml  isolated_0032_ilc_on.yaml  isolated_0064_ilc_aggressive.yaml  isolated_0064_ilc_off.yaml  isolated_0064_ilc_on.yaml  isolated_0128_ilc_aggressive.yaml  isolated_0128_ilc_off.yaml  isolated_0128_ilc_on.yaml  isolated_0256_ilc_aggressive.yaml  isolated_0256_ilc_off.yaml  isolated_0256_ilc_on.yaml  isolated_0512_ilc_aggressive.yaml  isolated_0512_ilc_off.yaml  isolated_0512_ilc_on.yaml  isolated_1000_ilc_aggressive.yaml  isolated_1000_ilc_off.yaml  isolated_1000_ilc_on.yaml  isolated_2000_ilc_aggressive.yaml  isolated_2000_ilc_off.yaml  isolated_2000_ilc_on.yaml  samples_0032_ilc_off.yaml  samples_0032_ilc_on.yaml  samples_0064_ilc_off.yaml  samples_0064_ilc_on.yaml  samples_0128_ilc_off.yaml  samples_0128_ilc_on.yaml  samples_0256_ilc_off.yaml  samples_0256_ilc_on.yaml  samples_0512_ilc_off.yaml  (+5 more)
src/control/mppi_3d/config/: mppi_3d_a.yaml
src/control/mppi_h/config/: mppi_h.yaml
src/control/mppi_h/include/mode1_mppi_3d/: mppi_3d_core.hpp  mppi_3d_setting.hpp  param.hpp
src/control/mppi_h/include/mode2_mppi_4d/: mppi_4d_core.hpp  mppi_4d_setting.hpp  param.hpp
src/control/mppi_h/include/mppi_h/: adaptive_estimator.hpp  mppi_h.hpp  mppi_h_core.hpp  tire_stiffness_estimator.hpp
src/control/mppi_h/launch/: mppi_h.launch
src/control/mppi_h/scripts/: mppi_with_learner_node.py  online_residual_learner.py
src/control/mppi_h/src/: mppi_h.cpp  mppi_h_core.cpp
src/control/mppi_h/src/mode1_mppi_3d/: mppi_3d_core.cpp
src/control/mppi_h/src/mode2_mppi_4d/: mppi_4d_core.cpp
src/control/mppi_hc/: CMakeLists.txt  PAPER.md  README.md  package.xml
src/control/mppi_hc/config/: mppi_hc.yaml  mppi_hc_ice.yaml  mppi_hc_low_friction.yaml
src/control/mppi_hc/include/mppi_hc/: cost_function.hpp  dynamics.hpp  mppi_hc_core.hpp  mppi_hc_ros.hpp  slip_compensator.hpp  slip_estimator.hpp  types.hpp
src/control/mppi_hc/launch/: mppi_hc.launch
src/control/mppi_hc/src/: cost_function.cpp  mppi_hc_core.cpp  mppi_hc_node.cpp  mppi_hc_ros.cpp  slip_compensator.cpp  slip_estimator.cpp
src/control/mppi_ilc/: CMakeLists.txt  package.xml
src/control/mppi_ilc/config/: mppi_ilc.yaml  mppi_ilc_low_friction.yaml
src/control/mppi_ilc/include/mppi_ilc/: ilc_memory.hpp  mppi_ilc_core.hpp  mppi_ilc_ros.hpp
src/control/mppi_ilc/launch/: mppi_ilc.launch
src/control/mppi_ilc/src/: mppi_ilc_core.cpp  mppi_ilc_node.cpp  mppi_ilc_ros.cpp
src/control/mppi_ilc_prior/: CMakeLists.txt  README.md  README_ILC.md  package.xml
src/control/mppi_ilc_prior/config/: mppi_ilc_prior.yaml
src/control/mppi_ilc_prior/docs/: 01_Position_Waypoint_ILC.md  01_Position_Waypoint_ILC_v2.md  02_MPPI_Slip_Model_Sampling_8D.md
src/control/mppi_ilc_prior/include/mppi_ilc_prior/: ilc_memory.hpp  mppi_ilc_prior_core.hpp  mppi_ilc_prior_ros.hpp
src/control/mppi_ilc_prior/launch/: mppi_ilc_prior.launch
src/control/mppi_ilc_prior/src/: mppi_ilc_prior_core.cpp  mppi_ilc_prior_node.cpp  mppi_ilc_prior_ros.cpp
src/control/mppi_tf/: CMakeLists.txt  README.md  package.xml
src/control/mppi_tf/config/: mppi_tf.yaml
src/control/mppi_tf/include/mppi_tf/: cost_function.hpp  dynamics.hpp  force_allocator.hpp  mppi_tf_core.hpp  mppi_tf_ros.hpp  parameter_estimator.hpp  tire_model.hpp  types.hpp
src/control/mppi_tf/launch/: mppi_tf.launch
src/control/mppi_tf/src/: cost_function.cpp  dynamics.cpp  force_allocator.cpp  mppi_tf_core.cpp  mppi_tf_node.cpp  mppi_tf_ros.cpp  parameter_estimator.cpp  tire_model.cpp
src/mppi_h_circular_test/: CMakeLists.txt  package.xml
src/mppi_h_circular_test/config/: mppi_h_params.yaml  track.yaml
src/mppi_h_circular_test/launch/: mppi_h_circular.launch
src/mppi_h_circular_test/scripts/: circular_path_tracking_mppi_h.py  publish_circular_path.py
src/mppi_h_square_test/: CMakeLists.txt  README.md  package.xml
src/mppi_h_square_test/config/: mppi_h_params.yaml
src/mppi_h_square_test/launch/: mppi_h_square.launch
src/mppi_h_square_test/scripts/: publish_figure8_path.py  publish_racetrack_path.py  publish_square_path.py  square_path_tracking_mppi_h.py
src/planning/reference_costmap_generator/launch/: reference_costmap_generator.launch
src/planning/reference_costmap_generator/src/: reference_costmap_generator.cpp
src/simulation/gazebo/world_handler/world/: maze_tiles.world  (+1 more)
src/visualization/map_visualizer/src/: map_visualizer.cpp
src/visualization/mppi_eval_logger/: CMakeLists.txt  package.xml
src/visualization/mppi_eval_logger/scripts/: mppi_eval_logger.py
src/visualization/mppi_paper_logger/: CMakeLists.txt  package.xml
src/visualization/mppi_paper_logger/scripts/: mppi_paper_logger.py
(+2 files in other folders)
