<package format="2">
  <name>mppi_h_circular_test</name>
  <version>0.1.0</version>
  <description>MPPI_H based circular path tracking for differential drive robots.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mppi_h</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>