<?xml version="1.0"?>
<package format="2">
  <name>mppi_eval_logger</name>
  <version>0.0.1</version>
  <description>CSV logger for MPPIEval topics to compare planners.</description>

  <maintainer email="noreply@example.com">mppi_eval_logger</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mppi_eval_msgs</exec_depend>

  <export />
</package>
